# llm_playlist

./: README.md
llm_project/: pyproject.toml
llm_project/src/llm_project/: main.py
