[project]
name = "llm-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Efren",email = "efren.rosales@rombo.mx"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "llm_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
