[project]
name = "llm-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Efren",email = "aldair.rgomez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.0",
    "librosa>=0.10.0",
    "numpy>=1.21.0"
]

[tool.poetry]
packages = [{include = "llm_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
